# foodforecast

./: README.md  app.py  headcount.pkl  meat.pkl  plotting.py  pyproject.toml  vegan.pkl  veggie.pkl
instance/: canteen.db
migrations/versions/: 7d998198fb83_initial_migration.py
templates/: plot.html
