[tool.poetry]
name = "foodforecast"
version = "0.1.0"
description = ""
authors = ["Johann Quassowski <qmtutor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask-Migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
